# z2p-axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  justfile
.github/workflows/: check.yml  test.yml
.sqlx/: query-1652a056bfdfa014285551a641f5c07505f3d53738085d771c6bb7545e7df3ec.json  query-59f8c2b40abc5fca8e6cc6cad6b50be006ffd9d8a0d6a43ba4896086888920e2.json
configuration/: local.yaml
migrations/: 20231128211616_user.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriber.rs
tests/common/: mod.rs
