[package]
name = "z2p_axum"
edition = "2024"
rust-version = "1.88.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p_axum"


[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
hyper = "0.14.24"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
serde_json = "1.0.108"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
miette = "7.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
snafu = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
rstest = "0.25.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
fake = "4.3.0"
rand = "0.9.1"
